kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mim-traders
  labels:
    app: mim-traders
